force-app/main/default/objects/DIA_Lead__c/fields/Law_Enforcement_Result__c.field-meta.xml
<CustomField>
    <fullName>Law_Enforcement_Result__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Law Enforcement Result</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>