force-app/main/default/objects/DIA_Lead__c/fields/Lead_Accepted_or_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Lead_Accepted_or_Rejected__c</fullName>
    <label>Lead Accepted or Rejected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>