force-app/main/default/objects/DIA_Lead__c/fields/Lead_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Contact Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>