force-app/main/default/objects/DIA_Lead__c/fields/Mark_As_TDY__c.field-meta.xml
<CustomField>
    <fullName>Mark_As_TDY__c</fullName>
    <label>Mark As TDY</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>