force-app/main/default/objects/DIA_Lead__c/fields/Medical_Release_Provided_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Medical_Release_Provided_Explanation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Release Provided - Explanation</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>