force-app/main/default/objects/DIA_Lead__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In person</fullName>
            </value>
            <value>
                <fullName>Telephonic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>