force-app/main/default/objects/DIA_Lead__c/fields/Narrator_Comments__c.field-meta.xml
<CustomField>
    <fullName>Narrator_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Narrator Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>