force-app/main/default/objects/DIA_Lead__c/fields/Passport_Expired_or_Invalidated__c.field-meta.xml
<CustomField>
    <fullName>Passport_Expired_or_Invalidated__c</fullName>
    <label>Passport Expired or Invalidated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>