force-app/main/default/objects/DIA_Lead__c/fields/Personal_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Personal_Contact_Method__c</fullName>
    <label>Personal Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>By Telephone/Fax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>