force-app/main/default/objects/DIA_Lead__c/fields/Police_Report_Number__c.field-meta.xml
<CustomField>
    <fullName>Police_Report_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Police Report Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>