force-app/main/default/objects/DIA_Lead__c/fields/Protected_Source__c.field-meta.xml
<CustomField>
    <fullName>Protected_Source__c</fullName>
    <label>Protected Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>