force-app/main/default/objects/DIA_Lead__c/fields/QA_Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>QA_Rejection_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QA Rejection Comments</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>