force-app/main/default/objects/DIA_Lead__c/fields/Reason_for_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Waiver__c</fullName>
    <label>Reason for Waiver</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subject not available</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>