force-app/main/default/objects/DIA_Lead__c/fields/Recommends_Notes__c.field-meta.xml
<CustomField>
    <fullName>Recommends_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recommends Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>