force-app/main/default/objects/DIA_Lead__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open Record</fullName>
                <default>true</default>
                <label>Open Record</label>
            </value>
            <value>
                <fullName>Protected Record</fullName>
            </value>
            <value>
                <fullName>Third Party Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>