force-app/main/default/objects/DIA_Lead__c/fields/Renounce_Foreign_Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Renounce_Foreign_Citizenship__c</fullName>
    <label>Renounce Foreign Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>