force-app/main/default/objects/DIA_Lead__c/fields/Renounce_Foreign_Citizenship_reason__c.field-meta.xml
<CustomField>
    <fullName>Renounce_Foreign_Citizenship_reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Renounce Foreign Citizenship Reason</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>