force-app/main/default/objects/DIA_Lead__c/fields/Show_Complete_Update_Lead__c.field-meta.xml
<CustomField>
    <fullName>Show_Complete_Update_Lead__c</fullName>
    <formula>IF((NOT(ISPICKVAL(Status__c,&apos;Completed&apos;)) &amp;&amp;  NOT(ISPICKVAL(Status__c,&apos;QA Review Completed&apos;))),true,false  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Complete/Update Lead</label>
    <type>Checkbox</type>
</CustomField>