force-app/main/default/objects/DIA_Lead__c/fields/Show_QA_Review_Buttons__c.field-meta.xml
<CustomField>
    <fullName>Show_QA_Review_Buttons__c</fullName>
    <formula>IF(OR(ISPICKVAL(Status__c,&apos;Completed&apos;),ISPICKVAL(Status__c,&apos;QA Review Completed&apos;)),true,false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show QA Review Buttons</label>
    <type>Checkbox</type>
</CustomField>