force-app/main/default/objects/DIA_Lead__c/fields/Social_Contact__c.field-meta.xml
<CustomField>
    <fullName>Social_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Social Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>