force-app/main/default/objects/DIA_Lead__c/fields/Source_State__c.field-meta.xml
<CustomField>
    <fullName>Source_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>