force-app/main/default/objects/DIA_Lead__c/fields/Source_Zip__c.field-meta.xml
<CustomField>
    <fullName>Source_Zip__c</fullName>
    <label>Source Zip</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>