force-app/main/default/objects/DIA_Lead__c/fields/Span_Of_Treatment_Dates_provided_From__c.field-meta.xml
<CustomField>
    <fullName>Span_Of_Treatment_Dates_provided_From__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Span Of Treatment Dates provided From</label>
    <type>Date</type>
</CustomField>