force-app/main/default/objects/DIA_Lead__c/fields/Standardised_Issues_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>Standardised_Issues_Other_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Standardised Issues Other Description</label>
    <type>TextArea</type>
</CustomField>