force-app/main/default/objects/DIA_Lead__c/fields/State_Birth_Certificate_Notes__c.field-meta.xml
<CustomField>
    <fullName>State_Birth_Certificate_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State Birth Certificate Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>