force-app/main/default/objects/DIA_Lead__c/fields/State_Birth_Certificate_Viewed__c.field-meta.xml
<CustomField>
    <fullName>State_Birth_Certificate_Viewed__c</fullName>
    <label>State Birth Certificate Viewed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>