force-app/main/default/objects/DIA_Lead__c/fields/Susceptibility_to_blackmail_pressure_or__c.field-meta.xml
<CustomField>
    <fullName>Susceptibility_to_blackmail_pressure_or__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Susceptibility to blackmail, pressure or</label>
    <length>255</length>
    <type>Text</type>
</CustomField>