force-app/main/default/objects/DIA_Lead__c/fields/Title_18_U_S_Code_Section_1001__c.field-meta.xml
<CustomField>
    <fullName>Title_18_U_S_Code_Section_1001__c</fullName>
    <label>Title 18, U.S. Code Section 1001</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>