force-app/main/default/objects/DIA_Lead__c/fields/Treatment_Location__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Location__c</fullName>
    <label>Treatment Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Discrepant</fullName>
            </value>
            <value>
                <fullName>Not Shown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>