force-app/main/default/objects/DIA_Lead__c/fields/Treatment_Location_Discrepant_Notes__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Location_Discrepant_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Treatment Location Discrepant Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>