force-app/main/default/objects/DIA_Lead__c/fields/USE_OF_ILLEGAL_SUBSTANCES_AND_ACTIVITY__c.field-meta.xml
<CustomField>
    <fullName>USE_OF_ILLEGAL_SUBSTANCES_AND_ACTIVITY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>USE OF ILLEGAL SUBSTANCES AND ACTIVITY</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>