force-app/main/default/objects/DIA_Lead__c/fields/Vow_of_Truthfulness_Unsworn_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Vow_of_Truthfulness_Unsworn_Declaration__c</fullName>
    <label>Vow of Truthfulness/Unsworn Declaration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>