force-app/main/default/objects/DIA_Lead__c/fields/waiver_extension_justification__c.field-meta.xml
<CustomField>
    <fullName>waiver_extension_justification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>waiver/extension justification</label>
    <type>TextArea</type>
</CustomField>