force-app/main/default/objects/DIA_Lead__c/fields/Was_the_record_obtained__c.field-meta.xml
<CustomField>
    <fullName>Was_the_record_obtained__c</fullName>
    <label>Was the record obtained?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes, record was obtained</fullName>
            </value>
            <value>
                <fullName>No, record does not exist</fullName>
            </value>
            <value>
                <fullName>No, unable to obtain record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>