force-app/main/default/objects/DIA_Lead__c/recordTypes/Financial_FINL.recordType-meta.xml
<RecordType>
    <fullName>Financial_FINL</fullName>
    <active>true</active>
    <label>Financial (FINL)</label>
</RecordType>