force-app/main/default/objects/DIA_Lead__c/recordTypes/Former_Spouse_FMSP.recordType-meta.xml
<RecordType>
    <fullName>Former_Spouse_FMSP</fullName>
    <active>true</active>
    <label>Former Spouse (FMSP)</label>
</RecordType>