force-app/main/default/objects/DIA_Lead__c/recordTypes/General_GENL.recordType-meta.xml
<RecordType>
    <fullName>General_GENL</fullName>
    <active>true</active>
    <label>General (GENL)</label>
</RecordType>