force-app/main/default/objects/DIA_Lead__c/recordTypes/Law_Enforcement_LAWE.recordType-meta.xml
<RecordType>
    <fullName>Law_Enforcement_LAWE</fullName>
    <active>true</active>
    <label>Law Enforcement (LAWE)</label>
</RecordType>