force-app/main/default/objects/DIA_Lead__c/recordTypes/Public_records_PUBR.recordType-meta.xml
<RecordType>
    <fullName>Public_records_PUBR</fullName>
    <active>true</active>
    <label>Public records (PUBR)</label>
</RecordType>