force-app/main/default/objects/DIA_Lead__c/recordTypes/References_REFE.recordType-meta.xml
<RecordType>
    <fullName>References_REFE</fullName>
    <active>true</active>
    <label>References (REFE)</label>
</RecordType>