force-app/main/default/objects/DIA_Lead__c/recordTypes/Residence_RESI.recordType-meta.xml
<RecordType>
    <fullName>Residence_RESI</fullName>
    <active>true</active>
    <label>Residence (RESI)</label>
</RecordType>