force-app/main/default/objects/DIA_Lead__c/recordTypes/Unemployment.recordType-meta.xml
<RecordType>
    <fullName>Unemployment</fullName>
    <active>true</active>
    <label>Unemployment</label>
</RecordType>